src/test/test-models/bad/compound-assign/plus_equals_bad_var_lhs.stan
functions {
  real foo(real a1) {
    real lf1 = a1;
    int lf2;
    lf3 += a1;
    return lf1;
  }
}
